--- a/data/split.tmpl
+++ b/data/split.tmpl
@@ -5,6 +5,7 @@ line {{ $i }} f1 is {{ split $v.f1 " "}}, f2 is {{ $v.f2}}.
   {{ $s }} is array. len {{ len $s }}
   bicep array: {{ $s | barray}}
   bicep array with quote: {{ $s | barrayq}}
+  bicep array func: {{ barray $s }}
 {{- end }}
 {{- end }}
 
